--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -3,6 +3,7 @@ import { getCollection } from 'astro:content';
 import Layout from '@layouts/Layout.astro';
 import PostMeta from '@components/PostMeta.astro';
 import type { InferGetStaticPropsType } from 'astro';
+import { Icon } from 'astro-icon';
 
 export async function getStaticPaths() {
   const allPosts = await getCollection('blog');
@@ -21,28 +22,115 @@ const { Content } = await post.render();
 ---
 
 <Layout title={`${title} - Jeff Winegar`}>
-  <main class="grid-container">
-    <header>
-      <PostMeta date={date} content={post.body} />
-      <h1>{title}</h1>
-    </header>
+  <main>
+    <div>
+      <a class="back-link" href="/" aria-label="back to home">
+        <Icon
+          aria-hidden="true"
+          role="img"
+          name="octicon:reply-16"
+          width="16"
+          height="16"
+        /> Back
+      </a>
+    </div>
+    <article class="grid-container">
+      <header>
+        <PostMeta date={date} content={post.body} />
+        <h1>{title}</h1>
+      </header>
 
-    <Content />
+      <Content />
+
+      <section>
+        <p>- end of post -</p>
+      </section>
+    </article>
   </main>
 </Layout>
 
 <style is:global>
+  [astro-icon] {
+    aspect-ratio: 1/1;
+    width: 1.1666666667em;
+  }
+  :not(.back-link) > [astro-icon] {
+    vertical-align: text-bottom;
+  }
+
+  main > div:first-of-type {
+    display: flex;
+    margin-block-end: calc(1ex / 0.32);
+    padding-inline: 1.0875rem;
+  }
+  
+  .back-link {
+    align-items: center;
+    color: var(--color-primary);
+    display: flex;
+    font-size: 1rem;
+    gap: 0.25em;
+    text-decoration-color: var(--color-primary-transparent);
+    transition: text-decoration 250ms ease;
+  }
+  .back-link:where(:hover, :focus) {
+    text-decoration-color: currentColor;
+  }
+
   header h1,
   header + * {
     margin-block-start: 0;
   }
 
+  article pre {
+    --color-shiki-theme: hsl(220deg 17% 46%); /* nord */
+
+    border-radius: 0.25rem;
+    grid-column: 1 / span 3;
+    margin-block: calc(1ex / 0.64);
+    padding-block: 0.75rem 0.875rem;
+    scrollbar-color: var(--color-shiki-theme) transparent;
+    scrollbar-width: thin;
+  }
+  article pre::-webkit-scrollbar {
+    background-color: transparent;
+    height: 0.25rem;
+  }
+  article pre::-webkit-scrollbar-thumb {
+    background-color: var(--color-shiki-theme);
+    border-radius: 0.25rem;
+  }
+
+  code {
+    font-size: 0.7777777778em;
+  }
+  :not(pre) > code {
+    background-color: var(--color-off-white);
+    border-radius: 0.125rem;
+    border: solid 1px var(--color-lighter-gray);
+    line-height: 1;
+    padding: 0.25rem 0.3125rem;
+  }
+  pre > code {
+    line-height: 1.2;
+  }
+  code .line {
+    display: inline-block;
+    line-height: 1.5;
+    padding-inline: 1rem;
+  }
+
+  section p {
+    color: var(--color-text-secondary);
+    font-size: 0.8888888889em;
+  }
+
   .callout > * {
     border-inline-start: solid 0.25em var(--color-light-gray);
     color: var(--color-text-secondary);
-    font-size: 0.8888888889em;
+    font-size: 0.9444444444em;
     font-style: italic;
-    padding-block: 0.5em;
+    padding-block-end: 0.3125em;
     padding-inline: 0.75em 0.5em;
   }
 </style>
