--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -59,7 +59,7 @@ const { title } = Astro.props;
     margin: 0;
   }
 
-  html:focus-within {
+  html {
     scroll-behavior: smooth;
   }
 
@@ -83,6 +83,7 @@ const { title } = Astro.props;
 
   main {
     font-size: 1.125rem;
+    margin-block-end: calc(1ex / 0.32);
   }
 
   img,
@@ -127,7 +128,7 @@ const { title } = Astro.props;
   }
 
   @media (prefers-reduced-motion: reduce) {
-    html:focus-within {
+    html {
       scroll-behavior: auto;
     }
 
