feat: remove extra space around emoji

--- a/src/components/AcessibleEmoji.astro
+++ b/src/components/AcessibleEmoji.astro
@@ -18,7 +18,5 @@ const emoji = emojiInfo?.emoji ? emojiInfo.emoji : '';
 <span
   role="img"
   aria-label={!!description ? description : null}
-  aria-hidden={!!!description}
+  aria-hidden={!!!description}>{emoji}</span
 >
-  {emoji}
-</span>
