--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,13 @@ const yrsExp: number =
 ---
 
 <Layout title="Jeff Winegar - Front-end Developer">
+  <Fragment slot="meta-tags">
+    <meta name="description" content="A full stack JavaScript developer focused on front-end technologies." />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Jeff Winegar" />
+    <meta property="og:description" content="A full stack JavaScript developer focused on front-end technologies." />
+  </Fragment>
+
   <main>
     <section class="grid-container">
       <h1>Hey, I'm Jeff Winegar.</h1>
