feat: update index description

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import type { SeoMeta } from '@components/SEO.astro';
 const seoMeta: SeoMeta = {
   type: 'website',
   title: 'Jeff Winegar',
-  description: 'A full stack JavaScript developer focused on front-end technologies.',
+  description: 'Full stack JavaScript developer focused on front-end technologies.',
 }
 
 const yrsExp: number =
