--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,19 +3,20 @@ import Layout from '@layouts/Layout.astro';
 import FeaturedRepos from '@components/FeaturedRepos.astro';
 import FeaturedPosts from '@components/FeaturedPosts.astro';
 import A11yEmoji from '@components/AcessibleEmoji.astro';
-import type { SeoMeta } from '@components/SEO.astro';
-
-const seoMeta: SeoMeta = {
-  type: 'website',
-  title: 'Jeff Winegar',
-  description: 'Full stack JavaScript developer focused on front-end technologies.',
-}
 
 const yrsExp: number =
   new Date().getFullYear() - new Date('2012-03-01').getFullYear();
 ---
 
-<Layout title="Jeff Winegar - Front-end Developer" {seoMeta}>
+<Layout
+  title="Jeff Winegar - Front-end Developer"
+  seoMeta={{
+    type: 'website',
+    title: 'Jeff Winegar',
+    description:
+      'Full stack JavaScript developer focused on front-end technologies.',
+  }}
+>
   <main>
     <section class="grid-container">
       <h1>Hey, I'm Jeff Winegar.</h1>
