--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,71 +17,69 @@ const yrsExp: number =
       'Full stack JavaScript developer focused on front-end technologies.',
   }}
 >
-  <main>
-    <section class="grid-container">
-      <h1>Hey, I'm Jeff Winegar.</h1>
+  <section class="grid-container">
+    <h1>Hey, I'm Jeff Winegar.</h1>
 
-      <p>
-        I'm a full stack JavaScript developer focused on front-end technologies
-        based out of Los Angeles. Originally a graphic designer for 10 years, I
-        transitioned into web development and have been building websites for
-        the past {yrsExp} years. When not writing code I am also an <a
-          href="https://www.strava.com/athletes/jeff_winegar"
-          >avid bike commuter</a
-        >; a <a href="https://www.instagram.com/jeff_winegar/">photographer</a>;
-        and a maker. I also really enjoy <a
-          href="https://music.apple.com/profile/jeff_winegar">music</a
-        > and watching a good <a href="https://letterboxd.com/jeff_winegar/"
-          >movie</a
-        >.
-      </p>
+    <p>
+      I'm a full stack JavaScript developer focused on front-end technologies
+      based out of Los Angeles. Originally a graphic designer for 10 years, I
+      transitioned into web development and have been building websites for the
+      past {yrsExp} years. When not writing code I am also an <a
+        href="https://www.strava.com/athletes/jeff_winegar"
+        >avid bike commuter</a
+      >; a <a href="https://www.instagram.com/jeff_winegar/">photographer</a>;
+      and a maker. I also really enjoy <a
+        href="https://music.apple.com/profile/jeff_winegar">music</a
+      > and watching a good <a href="https://letterboxd.com/jeff_winegar/"
+        >movie</a
+      >.
+    </p>
 
-      <p>
-        I work in HTML, CSS, and JavaScript. Though always exploring new
-        technologies, my focus right now is on Typescript, React.js, Node,
-        Serverless, Edge Computing, Astro, and Next.js. Take a look at a few of
-        my public projects:
-      </p>
+    <p>
+      I work in HTML, CSS, and JavaScript. Though always exploring new
+      technologies, my focus right now is on Typescript, React.js, Node,
+      Serverless, Edge Computing, Astro, and Next.js. Take a look at a few of my
+      public projects:
+    </p>
 
-      <FeaturedRepos class="grid-full-width" />
+    <FeaturedRepos class="grid-full-width" />
 
-      <p>
-        I am currently a Senior Web Developer at Wunderman Thompson where I do
-        hands-on development and lead teams working for clients including
-        Genesis, Hyundai, Mazda, Shell, Snap, and Synchrony Bank in projects
-        that span from micro-sites, landing pages, and site components to
-        responsive dynamic data-driven emails and animated banner ads.
-      </p>
+    <p>
+      I am currently a Senior Web Developer at Wunderman Thompson where I do
+      hands-on development and lead teams working for clients including Genesis,
+      Hyundai, Mazda, Shell, Snap, and Synchrony Bank in projects that span from
+      micro-sites, landing pages, and site components to responsive dynamic
+      data-driven emails and animated banner ads.
+    </p>
 
-      <p>
-        If you'd like to see more of my contributions, take a look on <a
-          href="https://github.com/jeffwinegar">my GitHub profile</a
-        >. You can also see my work history on <a
-          href="https://www.linkedin.com/in/jeffwinegar">LinkedIn</a
-        >, or get in touch with me directly at <a
-          href="mailto:hello@jeffwinegar.com">hello@jeffwinegar.com</a
-        >.
-      </p>
+    <p>
+      If you'd like to see more of my contributions, take a look on <a
+        href="https://github.com/jeffwinegar">my GitHub profile</a
+      >. You can also see my work history on <a
+        href="https://www.linkedin.com/in/jeffwinegar">LinkedIn</a
+      >, or get in touch with me directly at <a
+        href="mailto:hello@jeffwinegar.com">hello@jeffwinegar.com</a
+      >.
+    </p>
 
-      <p><A11yEmoji symbol="👋" /> Thanks for visiting.</p>
-    </section>
+    <p><A11yEmoji symbol="👋" /> Thanks for visiting.</p>
+  </section>
 
-    <section class="grid-container">
-      <h2><A11yEmoji symbol="🤔" />&hellip;some thoughts</h2>
+  <section class="grid-container">
+    <h2><A11yEmoji symbol="🤔" />&hellip;some thoughts</h2>
 
-      <p>
-        This space is for me to post about what I like and am interested in
-        while trying not to worry about it being perfect. The entries may not be
-        complete thoughts, I may circle back to them, I may not, we'll see how
-        things go? <A11yEmoji symbol="🤷" />
-      </p>
+    <p>
+      This space is for me to post about what I like and am interested in while
+      trying not to worry about it being perfect. The entries may not be
+      complete thoughts, I may circle back to them, I may not, we'll see how
+      things go? <A11yEmoji symbol="🤷" />
+    </p>
 
-      <p>
-        If you like something you read here, please feel free to share it and
-        let me know. It's always nice to get feedback.
-      </p>
+    <p>
+      If you like something you read here, please feel free to share it and let
+      me know. It's always nice to get feedback.
+    </p>
 
-      <FeaturedPosts />
-    </section>
-  </main>
+    <FeaturedPosts />
+  </section>
 </Layout>
