--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,29 +27,30 @@ const currentYear = new Intl.DateTimeFormat('en-US', {
         const systemColorScheme = localStorage.getItem(
           'jw:setting:preferredColorScheme'
         );
-        const mediaQueryList = window.matchMedia('(prefers-color-scheme: dark)');
-  
+        const mediaQueryList = window.matchMedia(
+          '(prefers-color-scheme: dark)'
+        );
+
         if (
           typeof systemColorScheme === 'string' &&
           systemColorScheme !== 'system'
         ) {
           return systemColorScheme;
         }
-  
+
         if (
           typeof mediaQueryList.matches === 'boolean' ||
           systemColorScheme === 'system'
         ) {
           return mediaQueryList.matches ? 'dark' : 'light';
         }
-  
+
         return 'light';
       };
-  
-      document.documentElement.setAttribute(
-        'data-color-mode',
-        getInitialColorScheme()
-      );
+
+      const colorScheme = getInitialColorScheme();
+
+      document.documentElement.setAttribute('data-color-mode', colorScheme);
     </script>
 
     <SEO seoMeta={seoMeta} url={url} />
