feat: add styles for footer alignment

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -270,6 +270,11 @@ const currentYear = new Intl.DateTimeFormat('en-US', {
 </style>
 
 <style>
+  body {
+    display: grid;
+    grid-template-rows: 1fr auto;
+  }
+
   footer {
     font-size: 0.875rem;
     padding: 1.0875rem;
