feat: add proxy for plausible

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -52,6 +52,7 @@ const currentYear = new Intl.DateTimeFormat('en-US', {
 
       document.documentElement.setAttribute('data-color-scheme', colorScheme);
     </script>
+    <script defer data-domain="jeffwinegar.com" data-api="/stats/api/event" src="/stats/js/script.js"></script>
 
     <SEO seoMeta={seoMeta} url={url} />
     <meta name="generator" content={Astro.generator} />
